[gd_scene load_steps=5 format=2]

[ext_resource path="res://Things/GridCell/grid_cell.png" type="Texture" id=1]
[ext_resource path="res://Things/GridCell/GridCell.gd" type="Script" id=2]
[ext_resource path="res://Things/GridCell/grid_cell_background.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49, 49 )

[node name="GridCell" type="Node2D"]
script = ExtResource( 2 )

[node name="Visual" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="Visual"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )

[node name="Border" type="Sprite" parent="Visual"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
